--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,7 @@ firestore-debug.log*
 
 # Firebase emulator data
 firebase-emulator-data/
+firebase-export-*/
 
 # Don't ignore the firebaseConfig.tsx file
 !src/env/firebaseConfig.tsx
